k8s/network/allow-dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allow-dns
  namespace: hardened

spec:
  serviceAccountName: network-test-sa
  restartPolicy: Never

  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault

  containers:
  - name: dns
    image: busybox:1.36

    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true

      capabilities:
        drop:
        - ALL

    resources:
      requests:
        cpu: 50m
        memory: 64Mi

      limits:
        cpu: 100m
        memory: 128Mi

    command:
      - sh
      - -c
      - nslookup kubernetes.default.svc.cluster.local
