k8s/network/deny-database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: deny-database
  namespace: hardened

spec:
  serviceAccountName: network-test-sa
  restartPolicy: Never

  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: curl
      image: curlimages/curl:8.8.0

      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL

      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 100m
          memory: 128Mi

      volumeMounts:
        - name: tmp
          mountPath: /tmp

      command:
        - sh
        - -c
        - |
          nc -zvw5 db-service.database.svc.cluster.local 5432

  volumes:
    - name: tmp
      emptyDir: {}
